# vn

./: Cargo.toml  README.md
assets/: .gitignore
assets/sprites/BloodyChronicles/: Kaoru1.ron
src/: main.rs  random.rs  rt.rs  utils.rs
src/game/: config.rs  graphics.rs  mod.rs  state.rs
src/game/components/: camera.rs  mod.rs  sprites.rs  ui.rs
src/game/components/ui/: background.rs  builder.rs  mod.rs  res.rs
src/game/systems/: demo.rs  mod.rs
