[package]
name = "vn"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]

[dependencies]
cute-log = "1"
rand = "0.5"
specs = "^0.12.3"

[dependencies.amethyst]
version = "0.9"
features = ["nightly"]

[dependencies.lazy-panic]
version = "1"
features = ["backtrace-on"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_off"]

[profile.dev]
opt-level = 2
debug-assertions = true
