[package]
name = "vn"
version = "0.1.0"
authors = ["Douman <douman@gmx.se>"]

[dependencies]
cute-log = "1"
rand = "0.5"

[dependencies.amethyst]
path = "../amethyst/amethyst/"
#version = "0.9"

[dependencies.lazy-panic]
version = "1"
features = ["backtrace-on"]

[dependencies.log]
version = "0"
default-features = false
features = ["max_level_info", "release_max_level_off"]

[profile.dev]
opt-level = 2
debug-assertions = true
